src/test/ui/rfc-2008-non-exhaustive/uninhabited/indirect_match_with_exhaustive_patterns.stderr
error[E0004]: non-exhaustive patterns: type `IndirectUninhabitedEnum` is non-empty
  --> $DIR/indirect_match_with_exhaustive_patterns.rs:23:11
   |
LL |     match x {}
   |           ^
   |
note: `IndirectUninhabitedEnum` defined here
  --> $DIR/auxiliary/uninhabited.rs:26:1
   |
LL | pub struct IndirectUninhabitedEnum(UninhabitedEnum);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: the matched value is of type `IndirectUninhabitedEnum`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern as shown
   |
LL ~     match x {
LL +         _ => todo!(),
LL ~     }
   |

error[E0004]: non-exhaustive patterns: type `IndirectUninhabitedStruct` is non-empty
  --> $DIR/indirect_match_with_exhaustive_patterns.rs:27:11
   |
LL |     match x {}
   |           ^
   |
note: `IndirectUninhabitedStruct` defined here
  --> $DIR/auxiliary/uninhabited.rs:28:1
   |
LL | pub struct IndirectUninhabitedStruct(UninhabitedStruct);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: the matched value is of type `IndirectUninhabitedStruct`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern as shown
   |
LL ~     match x {
LL +         _ => todo!(),
LL ~     }
   |

error[E0004]: non-exhaustive patterns: type `IndirectUninhabitedTupleStruct` is non-empty
  --> $DIR/indirect_match_with_exhaustive_patterns.rs:31:11
   |
LL |     match x {}
   |           ^
   |
note: `IndirectUninhabitedTupleStruct` defined here
  --> $DIR/auxiliary/uninhabited.rs:30:1
   |
LL | pub struct IndirectUninhabitedTupleStruct(UninhabitedTupleStruct);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: the matched value is of type `IndirectUninhabitedTupleStruct`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern as shown
   |
LL ~     match x {
LL +         _ => todo!(),
LL ~     }
   |

error[E0004]: non-exhaustive patterns: type `IndirectUninhabitedVariants` is non-empty
  --> $DIR/indirect_match_with_exhaustive_patterns.rs:37:11
   |
LL |     match x {}
   |           ^
   |
note: `IndirectUninhabitedVariants` defined here
  --> $DIR/auxiliary/uninhabited.rs:32:1
   |
LL | pub struct IndirectUninhabitedVariants(UninhabitedVariants);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: the matched value is of type `IndirectUninhabitedVariants`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern as shown
   |
LL ~     match x {
LL +         _ => todo!(),
LL ~     }
   |

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0004`.
